# Ui

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/frontend/: CMakeLists.txt  main.cpp  main_tool_layout_obj.cpp  main_tool_layout_obj.h  main_window.cpp  main_window.h
src/frontend/global/: global.h  macro.h
src/frontend/resource/: main.qss  resource.qrc
src/frontend/table/: table.cmake  table_delegate.cpp  table_delegate.h  table_global.h  table_menu.cpp  table_menu.h  table_model.cpp  table_model.h  table_view.cpp  table_view.h
src/frontend/table/command/: clear_cmd.cpp  clear_cmd.h  insert_cmd.cpp  insert_cmd.h  insert_column_cmd.cpp  insert_column_cmd.h  insert_row_cmd.cpp  insert_row_cmd.h  move_down_cmd.cpp  move_down_cmd.h  move_left_cmd.cpp  move_left_cmd.h  move_right_cmd.cpp  move_right_cmd.h  move_up_cmd.cpp  move_up_cmd.h  paste_cmd.cpp  paste_cmd.h  remove_cmd.cpp  remove_cmd.h  remove_column_cmd.cpp  remove_column_cmd.h  remove_row_cmd.cpp  remove_row_cmd.h  table_cmd.cpp  table_cmd.h
src/frontend/table/data/: copy_data.cpp  copy_data.h  discrete_matrix.h  matrix.h  table_data.cpp  table_data.h
src/frontend/table/ui/: insert_child_dlg.cpp  insert_child_dlg.h  insert_child_dlg.ui  remove_child_dlg.cpp  remove_child_dlg.h  remove_child_dlg.ui
src/frontend/title/: title.cmake  title_widget.cpp  title_widget.h
src/frontend/toolbar/: tool.cmake  tool_bar.cpp  tool_bar.h
src/frontend/toolbar/dock/: dock_title_widget.cpp  dock_title_widget.h
src/frontend/tree/: tree.cmake  tree_menu.cpp  tree_menu.h  tree_model.cpp  tree_model.h  tree_view.cpp  tree_view.h
src/modules/: CMakeLists.txt  no_copy.h
src/modules/base/: CMakeLists.txt  log.cpp  log.h
src/modules/base/configure/: conf_mgr.cpp  conf_mgr.h  conf_var.h  configure.cpp  configure.h  transformer.h
test/: CMakeLists.txt
test/frontend/: CMakeLists.txt  test_discrete_matrix.cpp  test_table.cpp  test_tree.cpp  test_ui.cpp
test/frontend/resource/: test.qrc
test/frontend/resource/file/: tree_view.json
test/modules/: CMakeLists.txt  test_logger.cpp
